tests/error/template_class_no_type.gw
#! [contains] you must provide template types
class<~A~> C {
  var A a;
}

var C c;
